[package]
name = "retry-backon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
pin-project = "1.0.12"
rand = "0.8.5"
tokio = { version = "1.25.0", features = ["time"] }
[dev-dependencies]
anyhow = "1.0.69"
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["full"] }
