[package]
name = "rust-libp2p-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.25"
libp2p = { version = "0.50.0", features = ["async-std", "noise", "mplex", "yamux", "dns", "tcp", "websocket", "ping"] }
